--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="main.js"></script>
-    <title>Webaruhaz</title>
+    <title>Webáruhaz</title>
 </head>
 
 <body>
+    
 
 </body>
 
