--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="navbar navbar-expand-md navbar-light bg-white shadow-sm sticky-top">
         <div class="container">
-            <a class="navbar-brand fw-bold text-primary" href="/">TechZone</a>
+            <a class="navbar-brand fw-bold text-primary" href="/">Webstore</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -66,8 +66,8 @@
                     </div>
                     <div class="col-md-6 text-center">
                         <div class="position-relative scale-in">
-                            <img src="/placeholder.svg" alt="Featured Product"
-                                class="img-fluid rounded-3 shadow-lg transform-rotate" width="600" height="400">
+                            <img src="#" alt="Featured Product" class="img-fluid rounded-3 shadow-lg transform-rotate"
+                                width="600" height="400">
                             <div class="bg-accent position-absolute top-50 end-50 rounded-circle blur-circle"></div>
                         </div>
                     </div>
@@ -86,67 +86,11 @@
                 </div>
 
                 <div class="row g-4 itemList">
-                    <!-- Product 2 -->
-                    <!-- <div class="col-sm-6 col-lg-3">
-                        <div class="card h-100 product-card border-primary">
-                            <div class="position-relative">
-                                <img src="/placeholder.svg" alt="UltraBook X1" class="card-img-top" height="300">
-                                <span class="position-absolute top-0 end-0 m-2 badge bg-accent">Featured</span>
-                            </div>
-                            <div class="card-body p-3">
-                                <p class="text-muted small">Laptops</p>
-                                <h5 class="card-title">UltraBook X1</h5>
-                                <p class="fw-bold fs-4">$1,899.99</p>
-                            </div>
-                            <div class="card-footer bg-white border-0 p-3 pt-0">
-                                <button class="btn btn-primary w-100">
-                                    <i class="bi bi-cart me-2"></i> Add to Cart
-                                </button>
-                            </div>
-                        </div>
-                    </div> -->
 
-                    <!-- Product 3 -->
-                    <!-- <div class="col-sm-6 col-lg-3">
-                        <div class="card h-100 product-card">
-                            <div class="position-relative">
-                                <img src="/placeholder.svg" alt="SlimTab Air" class="card-img-top" height="300">
-                            </div>
-                            <div class="card-body p-3">
-                                <p class="text-muted small">Tablets</p>
-                                <h5 class="card-title">SlimTab Air</h5>
-                                <p class="fw-bold fs-4">$899.99</p>
-                            </div>
-                            <div class="card-footer bg-white border-0 p-3 pt-0">
-                                <button class="btn btn-primary w-100">
-                                    <i class="bi bi-cart me-2"></i> Add to Cart
-                                </button>
-                            </div>
-                        </div>
-                    </div> -->
-
-                    <!-- Product 4 -->
-                    <!-- <div class="col-sm-6 col-lg-3">
-                        <div class="card h-100 product-card">
-                            <div class="position-relative">
-                                <img src="/placeholder.svg" alt="SoundWave Pro" class="card-img-top" height="300">
-                            </div>
-                            <div class="card-body p-3">
-                                <p class="text-muted small">Audio</p>
-                                <h5 class="card-title">SoundWave Pro</h5>
-                                <p class="fw-bold fs-4">$349.99</p>
-                            </div>
-                            <div class="card-footer bg-white border-0 p-3 pt-0">
-                                <button class="btn btn-primary w-100">
-                                    <i class="bi bi-cart me-2"></i> Add to Cart
-                                </button>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
 
                 <div class="text-center mt-5">
-                    <a href="/products" class="text-accent fw-medium text-decoration-underline">View All Products</a>
+                    <a href="#" class="text-accent fw-medium text-decoration-underline">View All Products</a>
                 </div>
             </div>
         </section>
