--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="ms-auto">
                     <a href="#" class="btn btn-outline-dark position-relative">
-                        <i class="bi bi-cart"></i>
+                        <i class="bi bi-cart counter"></i>
                     </a>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="row g-4 itemList">
-
+                    <!-- products -->
                 </div>
 
                 <div class="text-center mt-5">
