--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="main.js"></script>
 </head>
 
 <body>
+
     <header class="navbar navbar-expand-md navbar-light bg-white shadow-sm sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold text-primary" href="/">Webstore</a>
@@ -38,13 +39,16 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="ms-auto">
-                    <a href="#" class="btn btn-outline-dark position-relative">
+                    <a href="#" class="btn btn-outline-dark position-relative shopCart">
                         <i class="bi bi-cart counter"></i>
                     </a>
                 </div>
             </div>
         </div>
     </header>
+    <div class="sidebar">
+
+    </div>
 
     <main>
         <section class="bg-primary text-white py-5 py-md-7">
