--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 text-center">
-                        <div class="position-relative scale-in">
-                            <img src="#" alt="Featured Product" class="img-fluid rounded-3 shadow-lg transform-rotate"
-                                width="600" height="400">
-                            <div class="bg-accent position-absolute top-50 end-50 rounded-circle blur-circle"></div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -256,7 +252,7 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="fw-bold mb-3">TechZone</h5>
-                    <p class="text-muted small">
+                    <p class="text-white">
                         Your destination for premium tech devices with exceptional quality and innovative features.
                     </p>
                 </div>
@@ -264,11 +260,11 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="fw-bold mb-3">Products</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="/phones" class="text-muted text-decoration-none">Smartphones</a></li>
-                        <li class="mb-2"><a href="/laptops" class="text-muted text-decoration-none">Laptops</a></li>
-                        <li class="mb-2"><a href="/tablets" class="text-muted text-decoration-none">Tablets</a></li>
-                        <li class="mb-2"><a href="/audio" class="text-muted text-decoration-none">Audio</a></li>
-                        <li class="mb-2"><a href="/accessories" class="text-muted text-decoration-none">Accessories</a>
+                        <li class="mb-2"><a href="/phones" class="text-white">Smartphones</a></li>
+                        <li class="mb-2"><a href="/laptops" class="text-white">Laptops</a></li>
+                        <li class="mb-2"><a href="/tablets" class="text-white">Tablets</a></li>
+                        <li class="mb-2"><a href="/audio" class="text-white">Audio</a></li>
+                        <li class="mb-2"><a href="/accessories" class="text-white">Accessories</a>
                         </li>
                     </ul>
                 </div>
@@ -276,12 +272,12 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="fw-bold mb-3">Support</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="/contact" class="text-muted text-decoration-none">Contact Us</a></li>
-                        <li class="mb-2"><a href="/faq" class="text-muted text-decoration-none">FAQ</a></li>
-                        <li class="mb-2"><a href="/warranty" class="text-muted text-decoration-none">Warranty</a></li>
-                        <li class="mb-2"><a href="/returns" class="text-muted text-decoration-none">Returns &
+                        <li class="mb-2"><a href="/contact" class="text-white">Contact Us</a></li>
+                        <li class="mb-2"><a href="/faq" class="text-white">FAQ</a></li>
+                        <li class="mb-2"><a href="/warranty" class="text-white">Warranty</a></li>
+                        <li class="mb-2"><a href="/returns" class="text-white">Returns &
                                 Exchanges</a></li>
-                        <li class="mb-2"><a href="/shipping" class="text-muted text-decoration-none">Shipping Info</a>
+                        <li class="mb-2"><a href="/shipping" class="text-white">Shipping Info</a>
                         </li>
                     </ul>
                 </div>
@@ -289,11 +285,11 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="fw-bold mb-3">Company</h5>
                     <ul class="list-unstyled ">
-                        <li class="mb-2"><a href="/about" class="text-muted text-decoration-none">About Us</a></li>
-                        <li class="mb-2"><a href="/careers" class="text-muted text-decoration-none">Careers</a></li>
-                        <li class="mb-2"><a href="/blog" class="text-muted text-decoration-none">Blog</a></li>
-                        <li class="mb-2"><a href="/press" class="text-muted text-decoration-none">Press</a></li>
-                        <li class="mb-2"><a href="/privacy" class="text-muted text-decoration-none">Privacy Policy</a>
+                        <li class="mb-2"><a href="/about" class="text-white">About Us</a></li>
+                        <li class="mb-2"><a href="/careers" class="text-white">Careers</a></li>
+                        <li class="mb-2"><a href="/blog" class="text-white">Blog</a></li>
+                        <li class="mb-2"><a href="/press" class="text-white">Press</a></li>
+                        <li class="mb-2"><a href="/privacy" class="text-white">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
